<resources>
    <string name="app_name">FreelancerRegion4</string>

    <string name="connect">Conectado</string>
    <string name="disconnect">Desconectado</string>
    <string name="error_connect">Error</string>
    <string name="success">Communication established</string>
    <string name="intro">Titulo Atractivo ( ͡° ͜ʖ ͡°)</string>

    <string name="description">¿Necesitas ayuda para estudiar algun tema? ¿Deseas ayudar a otros estudiantes? ¡Bienvenido!</string>
    <string name="register">Comenzar</string>

    <string name="login">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="email">Correo electronico</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Repite la constraseña</string>
    <string name="phoneerror">el correo no puede contener espacios</string>
    <string name="pass2error">La contraseña no coincide</string>
    <string name="passerror">Debe ser mayor a 6 caracteres</string>
    <string name="phone">Numero de telefono</string>
    <string name="edad">Edad</string>
    <string name="habilidades">Habilidades</string>
    <string name="name">Nombre de usuario</string>
    <string name="sexo">Sexo</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="other">Otro</string>
    <string name="udescription">¿Que habilidades te describen?</string>
    <string name="carrera">Carrera</string>
    <string name="imagen">Imagen de perfil</string>
    <string name="nuevaoferta">Nueva oferta</string>
    <string name="tituloOferta">Titulo</string>
    <string name="materiaOferta">Materia</string>
    <string name="temaOferta">Tema</string>
    <string name="descripcionOferta">Descripcion</string>

    <string-array name="carreras">
        <item>Carrera</item>
        <item>Arquitectura</item>
        <item>Comunicación y periodismo</item>
        <item>Derecho</item>
        <item>Diseño industrial</item>
        <item>Economia</item>
        <item>Ingeniería Civil</item>
        <item>Ingeniería en Computación</item>
        <item>Ingeniería Eléctrica Electrónica</item>
        <item>Ingeniería Industrial</item>
        <item>Ingeniería Mecánica</item>
        <item>Pedagogía</item>
        <item>Planificación para el Desarrollo Agropecuario</item>
        <item>Relaciones Internacionales</item>
        <item>Sociología</item>
    </string-array>

    <string name="interesado">Estas interesado en: </string>
    <string name="indiferente">Indiferente</string>
    <string name="title_activity_offers">OffersActivity</string>
    <string name="title_offers">Ofertas(?)</string>
    <string name="title_dashboard">Tablero</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_ajustes">Ajustes</string>
</resources>
