<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.darktech.flfes.MaliFontTextView
            android:id="@+id/textViewInteresado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interesado" />

        <RadioGroup
            android:id="@+id/radioGroupSexoInteres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp">

            <RadioButton
                android:id="@+id/radioButtonMaleInteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radioButtonFemaleInteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/textColor" />

            <RadioButton
                android:id="@+id/radioButtonIndistintoInteres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/indiferente"
                android:textColor="@color/textColor" />
        </RadioGroup>

        <com.darktech.flfes.CustomFontButton
            android:id="@+id/buttonQuestionsNext"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="end"
            android:background="@android:drawable/ic_menu_send"
            android:foregroundGravity="right"
            android:gravity="end" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>