<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".signUpProfileActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonUploadImg"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@android:drawable/ic_menu_add"
                    app:layout_constraintBottom_toBottomOf="@id/imageViewUpload"
                    app:layout_constraintEnd_toEndOf="@+id/imageViewUpload"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/imageViewUpload"
                    app:layout_constraintTop_toTopOf="@id/imageViewUpload"
                    app:layout_constraintVertical_bias="0.913" />

                <ImageView
                    android:id="@+id/imageViewUpload"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:contentDescription="@string/imagen"
                    android:src="@drawable/alunbio"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="64dp"
                    tools:layout_editor_absoluteY="60dp" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/editTextNick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor"
                tools:layout_editor_absoluteX="-2dp"
                tools:layout_editor_absoluteY="311dp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor"
                tools:layout_editor_absoluteX="-3dp"
                tools:layout_editor_absoluteY="357dp" />


            <Spinner
                android:id="@+id/spinnerCareer"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:entries="@array/carreras"
                android:prompt="@string/carrera"
                android:spinnerMode="dialog"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="427dp" />

            <EditText
                android:id="@+id/editTextDescr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/udescription"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textHintColor" />

            <Button
                android:id="@+id/buttonProfileNext"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="end"
                android:background="@android:drawable/ic_menu_send"
                android:foregroundGravity="right"
                android:gravity="end" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>